Feature/extract reading direction (#22)
* Refactor and extract reading direction

* Fix potential leak

* feature: add swap rows

* refactor: Rename methods

* doc: Rewrite README

* doc: Rewrite README

* fix: Add test CI/CD

* fix: Add test CI/CD

* fix: Add test CI/CD

* doc: Add javadoc

* doc: Amend

* doc: Amend

* doc: Amend

* doc: Amend

* doc: Amend

* doc: Amend

* fix: CI/CD

* dox: Format site

* doc: Amend

* doc: renaming

* fix: deprecated

* refactor: better capillarity mgt

---------

Co-authored-by: Romuald Rousseau <romuald.rousseau@servier.com>